# rust-practice-actix-diesel

./: Cargo.toml  README.md
migrations/2020-07-16-012409_create_zip_codes/: down.sql  up.sql
migrations/2020-07-16-012650_create_med_supp/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
