[package]
name = "rust-practice-actix-diesel"
version = "0.1.0"
authors = ["tcross <tom.bz2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
actix = "0.10.0-alpha.3"
actix-web = "3.0.0-beta.1"
actix-rt = "1.1.1"
deadpool-redis = "0.6.0"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "serde_json", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
